--- a/src/components/VideoCard/index.css
+++ b/src/components/VideoCard/index.css
@@ -29,52 +29,5 @@
   width: 100%;
   z-index: 1;
   height: calc(100% - 56px);
-}
-
-.bottom-controls {
-  display: flex;
-  align-items: flex-end;
-  height: calc(100% - 56px);
-  padding: 4px;
-  z-index: 2;
-}
-
-.footer-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding-left: 1px;
-}
-
-.footer-left {
-  position: relative;
-  color: white;
-  width: 100%;
-  flex-grow: 1;
-  pointer-events: none;
-  display: flex;
-}
-
-.footer-left .text {
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.ticker {
-  width: 100%;
-  display: flex;
-  height: 22px;
-  flex-shrink: 1;
-}
-
-.footer-left span {
-  font-size: 16px;
-  font-weight: 400;
-  color: #fff;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  max-width: 90%;
-  height: 100%;
+  flex-shrink: 0;
 }
